# physlight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  WETA_README.md  physlight_camera_model.ipynb  physlight_imaging.ipynb  pyproject.toml  requirements.txt
.github/: issue_template.md
.github/workflows/: build.yml
data/: Arashi_Vision_Insta360_X5_380_780_5.json  Canon_EOS-1D_X_Mark_II_380_780_5.json  Canon_EOS-1Ds_Mark_III_380_780_5.json  Canon_EOS-1Ds_Mark_II_380_780_5.json  Canon_EOS_100D_380_780_5.json  Canon_EOS_1DS_Mark_III_380_780_5.json  Canon_EOS_1DX_Mark_II_380_780_5.json  Canon_EOS_200D_380_780_5.json  Canon_EOS_200D_II_380_780_5.json  Canon_EOS_5DS_380_780_5.json  Canon_EOS_5D_380_780_5.json  Canon_EOS_5D_Mark_III_380_780_5.json  Canon_EOS_5D_Mark_II_380_780_5.json  Canon_EOS_5D_Mark_IV_380_780_5.json  Canon_EOS_600D_380_780_5.json  Canon_EOS_M_380_780_5.json  Canon_EOS_R10_380_780_5.json  Canon_EOS_R5_380_780_5.json  Canon_EOS_R5_Mark_II_380_780_5.json  Canon_EOS_R5m2_380_780_5.json  Canon_EOS_R6_380_780_5.json  Canon_EOS_R_380_780_5.json  FUJIFILM_X-T3_380_780_5.json  FUJIFILM_X-T4_380_780_5.json  Fujifilm_X-T3_380_780_5.json  Fujifilm_X-T4_380_780_5.json  Hasselblad_L1D-20c_380_780_5.json  NIKON_D3300_380_780_5.json  NIKON_D5300_380_780_5.json  NIKON_Z_f_380_780_5.json  Nikon_D3300_380_780_5.json  Nikon_D800E_380_780_5.json  Nikon_D810_380_780_5.json  Nikon_D850_380_780_5.json  Panasonic_DC-GX9_380_780_5.json  SONY_ILCE-7CM2_380_780_5.json  SONY_ILCE-7M4_380_780_5.json  SONY_ILCE-7RM2_380_780_5.json  SONY_ILCE-7RM4_380_780_5.json  SONY_ILCE-7SM2_380_780_5.json  (+27 more)
data/camera/: Arashi_Vision_Insta360_X5_380_780_5.json  Canon_EOS-1D_X_Mark_II_380_780_5.json  Canon_EOS-1Ds_Mark_III_380_780_5.json  Canon_EOS-1Ds_Mark_II_380_780_5.json  Canon_EOS_100D_380_780_5.json  Canon_EOS_200D_380_780_5.json  Canon_EOS_200D_II_380_780_5.json  Canon_EOS_5DS_380_780_5.json  Canon_EOS_5D_380_780_5.json  Canon_EOS_5D_Mark_III_380_780_5.json  Canon_EOS_5D_Mark_II_380_780_5.json  Canon_EOS_5D_Mark_IV_380_780_5.json  Canon_EOS_600D_380_780_5.json  Canon_EOS_M_380_780_5.json  Canon_EOS_R10_380_780_5.json  Canon_EOS_R5_380_780_5.json  Canon_EOS_R5m2_380_780_5.json  Canon_EOS_R6_380_780_5.json  Canon_EOS_R_380_780_5.json  Fujifilm_X-T3_380_780_5.json  Fujifilm_X-T4_380_780_5.json  Hasselblad_L1D-20c_380_780_5.json  Nikon_D3300_380_780_5.json  Nikon_D5300_380_780_5.json  Nikon_D800E_380_780_5.json  Nikon_D810_380_780_5.json  Nikon_D850_380_780_5.json  Nikon_Z_f_380_780_5.json  Panasonic_DC-GX9_380_780_5.json  Sony_DSC-RX100M4_380_780_5.json  Sony_ILCE-6400_380_780_5.json  Sony_ILCE-7CM2_380_780_5.json  Sony_ILCE-7M3_380_780_5.json  Sony_ILCE-7M4_380_780_5.json  Sony_ILCE-7RM2_380_780_5.json  Sony_ILCE-7RM3_380_780_5.json  Sony_ILCE-7RM4_380_780_5.json  Sony_ILCE-7SM2_380_780_5.json  Sony_ILCE-7SM3_380_780_5.json  Sony_ILCE-9_380_780_5.json
docs/tex/: MANIFEST.md  Makefile  README.md  TODO.md  bibliography.bib  bibliography_radiance.bib  glossary.tex  jenson_font.tex  main.tex  minion_font.tex  physlight.bbx  physlight.cbx  physlight.cls  physlight.dbx  physlight.kilepr  physlight.txss  sec_appendix.tex  sec_calcsheets.tex  sec_foreword.tex  sec_illuminants.tex  sec_imaging.tex  sec_implementation.tex  sec_intro.tex  sec_lighting.tex  sec_notations.tex  sec_radiance.tex  sec_sensors.tex  sec_theory.tex  warnock_font.tex
docs/tex/figures/: Canon_1DMarkIII.pgf  Canon_5DMarkII.pgf  I_e.tikz.tex  M_e.tikz.tex  P_e.tikz.tex  Red_Mysterium_X.pgf  a_img_obj.pdf_tex  aperture_distance.tikz.tex  blackbody.pgf  chromas.pgf  chromas_enlarge.pgf  cielms2006.pgf  ciexyz1931.pgf  ciexyz1964.pgf  commonilluminants.pgf  emitter_surface.pdf_tex  exposure_equation_setup.pdf_tex  flux_etc.pdf_tex  illuminanta.pgf  illuminantd.pgf  illuminantf1-6.pgf  illuminantf10-12.pgf  illuminantf7-9.pgf  opposite-angle.tikz.tex  raydiff-1.tikz.tex
docs/tex/figures/geogebra/: I_e.ggb  M_e.ggb  OppositeAngle-2.ggb  OppositeAngle.ggb  P_e.ggb
docs/tex/figures_built/: Canon_1DMarkIII.pgf  Canon_5DMarkII.pgf  Red_Mysterium_X.pgf  a_img_obj.pdf_tex  blackbody.pgf  chromas.pgf  chromas_enlarge.pgf  cielms2006.pgf  ciexyz1931.pgf  commonilluminants.pgf  emitter_surface.pdf_tex  exposure_equation_setup.pdf_tex  flux_etc.pdf_tex  illuminantd.pgf  illuminantf1-6.pgf  illuminantf10-12.pgf  illuminantf7-9.pgf  radiance-fig1.pdf_tex  radiance-fig2.pdf_tex  radiance-fig3.pdf_tex  roscolux.pgf  smitscmy.pgf  smitsrgb.pgf  test.pgf
docs/tex/figures_src/data/camera/: Canon_1DMarkIII.csv  Canon_5DMarkII.csv  Red_Mysterium_X.csv
docs/tex/figures_src/data/cie/: CIE_illum_Dxx_comp.csv  CIE_illum_Dxx_comp.csv_metadata.json  CIE_illum_FLs.csv  CIE_illum_FLs.csv_metadata.json  CIE_illum_LEDs.csv  CIE_illum_LEDs.csv_metadata.json  CIE_lms_cf_10deg.csv  CIE_lms_cf_10deg.csv_metadata.json  CIE_lms_cf_2deg.csv  CIE_lms_cf_2deg.csv_metadata.json  CIE_xyz_1931_2deg.csv  CIE_xyz_1931_2deg.csv_metadata.json  CIE_xyz_1964_10deg.csv  CIE_xyz_1964_10deg.csv_metadata.json
docs/tex/figures_src/data/ieslm63/: bega_50988.6k3.ies  bega_84659K4.ies  bega_84693k4.ies  bega_omni001_1238lm.ies
docs/tex/figures_src/data/rosco/: roscolux.csv
docs/tex/figures_src/diagrams/: raydiff-1.tikz.tex
docs/tex/figures_src/geogebra/: aperture_distance.ggb  raydiff-1.ggb
docs/tex/figures_src/images/: 43301396_eps_normal_none.eps
docs/tex/scripts/: CIE.py  ColorSpace.py  SPD.py  SpectralCurve.py  ies_LM-63_loader.py  make_all_figures.py  system.py
examples/: physlight_camera_model.ipynb  physlight_imaging.ipynb
usd/: CMakeLists.txt  __init__.py  plugInfo.json
usd/cmake/: Config.cmake.in  Defaults.cmake  Export.cmake  Options.cmake  Packages.cmake  USDPluginTools.cmake
usd/physAreaLight/: CMakeLists.txt
usd/src/: CMakeLists.txt
